Closes #49 - Final pass of annotations, and cleanup of comments
