# src/assessment/app/Http/Controllers/CartController.php
@@ -105,13 +105,52 @@ class CartController extends Controller
         return response()->json($this->cartService->clearCart($userId));
     }
 
+    /**
+     * @OA\Post(
+     *     path="/checkout",
+     *     summary="Checkout a user's cart and place an order",
+     *     description="This endpoint allows a user to checkout their cart and create an order.",
+     *     tags={"Orders"},
+     *     security={{"bearerAuth": {}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Order successfully created.",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="boolean", example=true),
+     *             @OA\Property(property="order_id", type="integer", example=123),
+     *             @OA\Property(property="total_price", type="number", format="float", example=99.99),
+     *             @OA\Property(property="message", type="string", example="Order placed successfully.")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Failed to process the checkout.",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="boolean", example=false),
+     *             @OA\Property(property="message", type="string", example="Failed to process the checkout. Please try again.")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized. User must be authenticated.",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Unauthorized.")
+     *         )
+     *     )
+     * )
+     */
     public function checkout(): JsonResponse
     {
         $userId = Auth::id();
         $order = $this->cartService->checkout($userId);
+
         if($order['status']){
             return response()->json($order, 200);
         }
+        
         return response()->json($order, 422);
     }
 }
